# dmgr

./: .gitignore  README.md  pyproject.toml
docs/development/: daily-portfolio-backtest.md  data-ingestion-development.md  expected-slot-coverage-gate.md  factor-layer-polars-spec.md  factor-leakage-prefix-invariance-spec.md  factor-quality-checks.md  feature-store-spec.md  immutable-market-data-partitions.md  label-training-dataset-lineage.md  market-calendar-daily-status.md  research-pipeline-development.md  universe-management.md
src/quant_research/: __main__.py  cli.py  temporal_assets.py
tests/: test_bootstrap.py
tests/backtest/: test_daily_backtest.py
tests/contracts/: test_ingestion_contracts.py
tests/coverage/: test_analysis_store_gate.py  test_coverage_pipeline.py  test_expected_slots.py
tests/daily_status/: test_daily_status_assets.py
tests/data/: test_duckdb_store.py  test_ingestion_service.py  test_market_data_partition_contracts.py  test_market_data_readers_quality.py  test_market_data_store_ingestion_resolver.py  test_read_normalize_quality.py
tests/datasets/: test_feature_matrix.py  test_feature_matrix_labels.py  test_materialized_training_dataset.py  test_training_dataset_lineage.py
tests/e2e/: test_cli_pipeline.py
tests/evaluation/: test_analytics.py  test_architecture.py  test_pipeline_store.py
tests/factors/: test_builtin_factors.py  test_factor_registry.py  test_operator_registry.py  test_polars_factor_runner.py
tests/features/: test_duckdb_feature_store.py  test_factor_quality.py  test_feature_quality_gate.py  (+2 more)
(+115 files in other folders)
